# nasmjit

./: .gitignore  AsmJitNet.sln  AsmJitNet.vsmdi  Local.testsettings  NAsmJit.sln  TraceAndTestImpact.testsettings
AsmJit/: AsmJit.vcxproj  AsmJit.vcxproj.filters  CHANGELOG.txt  CMakeLists.txt  COPYING.txt  Doxygen  README.txt  TODO.txt  configure-borland-debug.bat  configure-borland-release.bat  configure-linux-debug.sh  configure-linux-release.sh  configure-mingw-debug.bat  configure-mingw-release.bat  configure-msvc-debug.bat  configure-msvc-release.bat
AsmJit-1.0/: CHANGELOG.txt  CMakeLists.txt  README.txt  TODO.txt
AsmJit.Compiler/: ArgumentsDirection.cs  AsmJit.Compiler.csproj  CallingConvention.cs  Comment.cs  Compiler.cs  CompilerUtil.cs  Epilog.cs  ForwardJumpData.cs  Function.cs  FunctionHint.cs  FunctionPrototype.cs  Instruction.cs  JitAction.cs  JitAction`3.cs  JitAction`4.cs  JitFunction`1.cs  JitFunction`4.cs  Mem2.cs  Ret.cs  VarCallFlags.cs  VarCallRecord.cs  VarData.cs  VariableClass.cs  VariableHint.cs  VariableType.cs  XMMVar.cs
AsmJit.Core/: ArraySegment.cs  AsmJit.Core.csproj  Assembler.cs  Buffer.cs  CodeGenerator.cs  CompilerProperty.cs  Condition.cs  CpuBugs.cs  CpuFeatures.cs  CpuInfo.cs  CpuVendor.cs  Errors.cs  Hint.cs  HintByteValue.cs  IIntrinsicSupport.cs  IIntrinsicSupport`4.cs  IMmIntrinsicSupport`1.cs  Imm.cs  InstructionCode.cs  InstructionDescription.cs  InstructionGroup.cs  MMReg.cs  Mem.cs  MemoryManager.cs  Operand.cs  OperandType.cs  RegIndex.cs  RelocationData.cs  RelocationType.cs  Util.cs  X87Reg.cs
AsmJit.Intrinsics/: AsmJit.Intrinsics.csproj  Intrinsics.cs
AsmJit.Sample/: AsmJit.Sample.csproj  NAsmJit.Sample.csproj  Program.cs  TestExceptionHandling.cs
AsmJit/AsmJit/: AsmJit.h  AsmJitAssembler.h  AsmJitAssemblerX86X64.cpp  AsmJitAssemblerX86X64.h  AsmJitBuild.h  AsmJitCompiler.h  AsmJitCompilerX86X64.cpp  AsmJitCompilerX86X64.h  AsmJitConfig.h  AsmJitCpuInfo.cpp  AsmJitCpuInfo.h  AsmJitDefs.h  AsmJitDefsX86X64.h  AsmJitLock.cpp  AsmJitLock.h  AsmJitLogger.h  AsmJitLoggerX86X64.cpp  AsmJitLoggerX86X64.h  AsmJitLoggerX86X64Dump.cpp  AsmJitLoggerX86X64Dump.py  AsmJitMemoryManager.cpp  AsmJitMemoryManager.h  AsmJitPrettyPrinter.cpp  AsmJitPrettyPrinter.h  AsmJitPrettyPrinter_regen.py  AsmJitSerializer.h  AsmJitSerializerX86X64.cpp  AsmJitSerializerX86X64.h  AsmJitUtil.cpp  AsmJitUtil.h  AsmJitVM.cpp  AsmJitVM.h  AsmJitVirtualMemory.cpp  AsmJitVirtualMemory.h  AsmJitWarningsPush.h  AsmJitX86.cpp  AsmJitX86.h  AssemblerX86X64.cpp  AssemblerX86X64.h  Build.h  (+14 more)
AsmJit/AsmJit/Core/: Assembler.cpp  Build.h  Func.h  IntUtil.h  Logger.cpp  StringBuilder.cpp
AsmJit/AsmJit/X86/: X86CompilerContext.cpp  X86Defs.cpp  X86Defs.h
AsmJit/Util/: generate-defs.py
AsmJit/doc/: Doxygen
AsmJit/scripts/: configure-mac-xcode.sh  configure-unix-makefiles-dbg.sh  configure-unix-makefiles-rel.sh  configure-win-borland-dbg.bat  configure-win-borland-rel.bat  configure-win-mingw-dbg.bat  configure-win-mingw-rel.bat  configure-win-msvc6.bat  configure-win-vs2005-x64.bat  configure-win-vs2005-x86.bat  configure-win-vs2008-x64.bat  configure-win-vs2008-x86.bat  configure-win-vs2010-x64.bat  configure-win-vs2010-x86.bat
AsmJit/test/: CMakeLists.txt  compilertest.cpp  configure-linux-debug.sh  configure-mingw-debug.bat  configure-msvc-debug.bat  cputest.cpp  jittest.cpp  reloctest.cpp  rewritetest.cpp  testcompiler.cpp  testcpu.cpp  testdummy.cpp  testfunclargeargs.cpp  testjit.cpp  testjumptable.cpp  testmemorymanager.cpp  testopcode.cpp  testreloc.cpp  testrewrite.cpp  testsetcc.cpp  teststate.cpp  testvariables.cpp  testvarmemalloc.cpp
AsmJitNet/: Align.cs  ArgumentsDirection.cs  ArraySegment.cs  AsmJitNet.csproj  Assembler.cs  AssemblerException.cs  BaseReg.cs  BaseVar.cs  Buffer.cs  Call.cs  CallingConvention.cs  CallingConventionInfo.cs  CodeGenerator.cs  Comment.cs  Compiler.cs  CompilerContext.cs  CompilerException.cs  CompilerProperty.cs  CompilerUtil.cs  Condition.cs  CpuBugs.cs  CpuFeatures.cs  CpuInfo.cs  CpuVendor.cs  DefaultMemoryManager.cs  Dummy.cs  EmbeddedData.cs  EmitOptions.cs  Emittable.cs  EmittableType.cs  Epilog.cs  Errors.cs  FileLogger.cs  ForwardJumpData.cs  Function.cs  FunctionEnd.cs  FunctionHint.cs  FunctionPrototype.cs  GPReg.cs  GPVar.cs  (+81 more)
AsmJitNetTest/: AsmJitNetTest.csproj  NAsmJitTest.csproj  TestJitFunctions.cs  TestJumps.cs  (+3 more)
asmjit/: CMakeLists.txt  COPYING.txt  README.txt
asmjit/extras/contrib/: winremoteruntime.cpp  winremoteruntime.h
asmjit/scripts/: configure-win-borland-dbg.bat  configure-win-borland-rel.bat  configure-win-mingw-dbg.bat  configure-win-mingw-rel.bat  configure-win-vs2005-x64.bat  configure-win-vs2005-x86.bat  configure-win-vs2008-x64.bat  configure-win-vs2008-x86.bat  configure-win-vs2010-x64.bat  configure-win-vs2010-x86.bat  configure-win-vs2013-x64.bat  configure-win-vs2013-x86.bat  generate-defs.js  generate-defs.py
asmjit/src/app/test/: benchx86.cpp  genblend.h  genopcode.h  testcpu.cpp  testdummy.cpp  testmem.cpp  testopcode.cpp  testsizeof.cpp  testx86.cpp
asmjit/src/asmjit/: asmjit.h  base.h  build.h  config.h  host.h  x86.h
asmjit/src/asmjit/base/: apibegin.h  apiend.h  assembler.cpp  assembler.h  assert.cpp  assert.h  codegen.cpp  codegen.h  compiler.cpp  compiler.h  context.cpp  context_p.h  cpu.cpp  cpu.h  defs.cpp  defs.h  error.cpp  error.h  func.cpp  func.h  globals.h  intutil.h  lock.h  logger.cpp  logger.h  memorymanager.cpp  memorymanager.h  podlist.h  podvector.cpp  podvector.h  runtime.cpp  runtime.h  string.cpp  string.h  vectypes.h  vmem.cpp  vmem.h  zone.cpp  zone.h
asmjit/src/asmjit/core/: build.h  compilercontext.h  compilerfunc.h  compileritem.h  func.h  intutil.h  lock.h  logger.h  memorymarker.h  podvector.h  stringbuilder.cpp  stringbuilder.h  zonememory.cpp
asmjit/src/asmjit/x86/: x86assembler.cpp  x86assembler.h  x86compiler.cpp  x86compiler.h  x86compilercontext.cpp  x86compilerfunc.h  x86compileritem.cpp  x86compileritem.h  x86context.cpp  x86context_p.h  x86cpu.cpp  x86cpu.h  x86defs.cpp  x86defs.h  x86func.cpp  x86func.h  x86operand.h
(+268 files in other folders)
